# unified_vector

./: CMakeLists.txt  README.md
benchmark/: benchmark_support.h  measurement.h  unified_benchmark_classes.cc  unified_benchmark_classes.h  unified_vector_benchmark.cc  virtual_benchmark_classes.cc  virtual_benchmark_classes.h  virtual_vector_benchmark.cc
benchmark/analysis/: plot_comparison.ipynb
tests/: unified_vector_test.cpp
unified_vector/: unified_vector.h
